Fixing platforms items icon spacing

--- a/playbook-website/app/javascript/components/Website/src/components/KitFilter/styles.scss
+++ b/playbook-website/app/javascript/components/Website/src/components/KitFilter/styles.scss
@@ -5,8 +5,9 @@
   width: 100%;
 }
 
-.pb_nav_list_item_text {
-  margin-left: $space_xs;
+.filter-icon {
+  height: $space_sm;
+  padding-right: $space_xs;
 }
 
 .pb_nav_list_kit_item:hover {
